# OpenCL-Tensorflow

./: CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: ADDING_NEW_OPS.md  ARCHITECTURE.md  MIGRATING_FROM_KERAS.md  ROADMAP.md  TROUBLESHOOTING.md
examples/: train_full_model.py  train_portable.py  train_simple_cnn.py
kernels/: batchnorm_kernels.cl  conv2d_kernels.cl  dense_kernels.cl  depthwise_conv2d_kernels.cl  relu_kernels.cl  sigmoid_kernels.cl  upsampling_bilinear_kernels.cl
opencl_tf/: __init__.py  _library.py  gradients.py  layers.py
opencl_tf/ops/: __init__.py  batchnorm.py  conv2d.py  dense.py  depthwise_conv2d.py  relu.py  sigmoid.py  upsampling.py
src/: cl_backend.cc  cl_backend.h  padding_utils.h
src/ops/: batchnorm_ops.cc  conv2d_ops.cc  dense_ops.cc  depthwise_conv2d_ops.cc  relu_ops.cc  sigmoid_ops.cc  upsampling_ops.cc
tests/: conftest.py  test_batchnorm.py  test_conv2d.py  test_dense.py  test_depthwise_conv2d.py  test_relu.py  test_sigmoid.py  test_upsampling.py
tools/: stress_gpu.py
